--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,22 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu type="overlay">
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
-        </ion-toolbar>
-      </ion-header>
+    <ion-menu type="overlay" id="menu-material">
       <ion-content>
-        <ion-list>
+        <div class="menu-header">
+          <img
+            class="user-avatar round"
+            [src]="chosenPicture || placeholder"
+            onerror="this.src='assets/images/girl-avatar.png'"
+          />
+          <p class="name">{{ user.name }}</p>
+          <p class="e-mail">{{ user.email }}</p>
+        </div>
+        <ion-list lines="none">
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
               <ion-icon slot="start" [name]="p.icon"></ion-icon>
               <ion-label>
-                {{p.title}}
+                {{ p.title }}
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
