--- a/src/app/cart/cart.page.scss
+++ b/src/app/cart/cart.page.scss
@@ -26,6 +26,10 @@
   font-size: 1rem;
 }
 
+h4 {
+  font-size: 1rem !important;
+}
+
 ion-row {
   padding: 6px 0px;
   border-bottom: 0.5px solid #eee;
@@ -40,4 +44,13 @@ ion-row {
   position: relative !important;
   top: 5px !important;
   margin: 0px 5px !important;
+}
+
+ion-label {
+  font-size: 1.2rem !important;
+}
+
+ion-textarea {
+  border: 1px solid #eee !important;
+  line-height: 100% !important;
 }
