--- a/src/app/mentab/mentab.page.html
+++ b/src/app/mentab/mentab.page.html
@@ -8,7 +8,7 @@
       Men
     </ion-title>
     <ion-buttons slot="end">
-      <ion-button>
+      <ion-button (click)="goToCart()">
         <ion-icon name="cart"></ion-icon>
         <ion-badge slot="end"></ion-badge>
       </ion-button>
