--- a/src/global.scss
+++ b/src/global.scss
@@ -68,3 +68,19 @@ ion-spinner.spinner-ios line {
 .w100 {
   width: 100% !important;
 }
+
+.primary {
+  color: #062f77 !important;
+}
+
+.text-center {
+  text-align: center !important;
+}
+
+.muted {
+  color: #777 !important;
+}
+
+.bold {
+  font-weight: bold !important;
+}
