--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,7 @@
         <div class="menu-header">
           <img
             class="user-avatar round"
-            [src]="chosenPicture || placeholder"
-            onerror="this.src='assets/images/girl-avatar.png'"
+            src="./assets/images/girl-avatar.png"
           />
           <p class="name">{{ user?.name }}</p>
           <p class="e-mail">{{ user?.email }}</p>
