--- a/src/app/kidstab/kidstab.page.html
+++ b/src/app/kidstab/kidstab.page.html
@@ -6,7 +6,7 @@
     <ion-title>
       Kids
     </ion-title>
-    <ion-buttons slot="end">
+    <ion-buttons slot="end" (click)="goToCart()">
       <ion-button>
         <ion-icon name="cart"></ion-icon>
         <ion-badge slot="end"></ion-badge>
