--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
             class="user-avatar round"
             src="./assets/images/girl-avatar.png"
           />
-          <p class="name">{{ user?.name }}</p>
+          <p class="name">{{ user?.name }} p</p>
           <p class="e-mail">{{ user?.email }}</p>
         </div>
         <ion-list lines="none">
