--- a/src/app/order-details/order-details.page.html
+++ b/src/app/order-details/order-details.page.html
@@ -71,6 +71,15 @@
   ></div>
   <ion-row class="ion-padding">
     <ion-col size="4">
+      <span class="muted">Discount</span>
+    </ion-col>
+    <ion-col size="5"></ion-col>
+    <ion-col size="3">
+      <span class="muted">- ₹ {{ data.discount }}</span>
+    </ion-col>
+  </ion-row>
+  <ion-row class="ion-padding">
+    <ion-col size="4">
       <span class="muted">Sub Total</span>
     </ion-col>
     <ion-col size="5"></ion-col>
