--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -26,12 +26,12 @@
   </ion-slides>
 
   <div class="category_card ">
-    <ion-card class="round" (click)="openCategory('DRY_CLEANING')">
+    <ion-card class="round" (click)="openCategory('WASH_IRON')">
       <ion-card-content>
         <ion-img src="./assets/images/dry.png"></ion-img>
       </ion-card-content>
     </ion-card>
-    <p>Dry Cleaning</p>
+    <p>Wash & Ironing</p>
   </div>
   <div class="category_card ">
     <ion-card class="round" (click)="openCategory('IRONING')">
@@ -42,19 +42,35 @@
     <p>Ironing</p>
   </div>
   <div class="category_card ">
-    <ion-card class="round" (click)="openCategory('DRESS_WASH')">
+    <ion-card class="round" (click)="openCategory('SHOES_WASH')">
       <ion-card-content>
-        <ion-img src="./assets/images/washing-machine.png"></ion-img>
+        <ion-img src="./assets/images/sneakers.png"></ion-img>
       </ion-card-content>
     </ion-card>
-    <p>Dress Wash</p>
+    <p>Shoes Wash</p>
   </div>
   <div class="category_card ">
-    <ion-card class="round" (click)="openCategory('DUVET_CLEANING')">
+    <ion-card class="round" (click)="openCategory('COMMERCIAL_LAUNDRY')">
       <ion-card-content>
-        <ion-img src="./assets/images/blanket.png"></ion-img>
+        <ion-img src="./assets/images/commercial.png"></ion-img>
       </ion-card-content>
     </ion-card>
-    <p>Duvet Cleaning</p>
+    <p>Commercial Laundry</p>
+  </div>
+  <div class="category_card ">
+    <ion-card class="round" (click)="openCategory('CARPET_WASH')">
+      <ion-card-content>
+        <ion-img src="./assets/images/carpet.png"></ion-img>
+      </ion-card-content>
+    </ion-card>
+    <p>Carpet Wash</p>
+  </div>
+  <div class="category_card ">
+    <ion-card class="round" (click)="openCategory('OTHERS')">
+      <ion-card-content>
+        <ion-img src="./assets/images/others.png"></ion-img>
+      </ion-card-content>
+    </ion-card>
+    <p>Others</p>
   </div>
 </ion-content>
