--- a/src/app/order-details/order-details.page.html
+++ b/src/app/order-details/order-details.page.html
@@ -87,4 +87,7 @@
       <span class="muted">₹ {{ data.amount }}</span>
     </ion-col>
   </ion-row>
+  <ion-button size="full" color="success" (click)="confirmDelivery(data.id)"
+    >Confirm Delivery</ion-button
+  >
 </ion-content>
